Replace AuthorizationGrantType AuthorizationCode with Implicit